--- a/index.html
+++ b/index.html
@@ -117,13 +117,6 @@
             class="mdi-action-assessment small"></i><span>Skills</span></a>
       </li>
       
-      <li class="bold">
-        <!--
-        ICONS:
-        -->
-        <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
-            class="mdi-social-school small"></i><span>Education</span></a>
-      </li>
 
       <li class="bold">
         <!-- 
@@ -190,22 +183,11 @@
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
               <h2>G'day, I'm <span class="teal">Wallace.</span></h2>
-              <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#0a2b50"></span></h5>
-              <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
+              <h5 style="color:#0a0a11">We do <span class="typing" style="font-weight: 300; color:#0a2b50"></span></h5>
+              <!-- <h5 style="color:#0a0a11">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>We make things happen.</h5>
             </div>
             <div class="social">
-              <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
-                <button class="icon-btn linkedin">
-                  <i class="fa fa-linkedin"></i>
-                </button>
-              </a>
-              <a href="https://github.com/varadbhogayata/" target="_blank">
-                <button class="icon-btn github">
-                  <i class="fa fa-github"></i>
-                </button>
-              </a>
-
               <!-- <a href="https://angel.co/u/varad_bhogayata" target="_blank">
                 <button class="icon-btn angellist">
                   <i class="fa fa-angellist"></i>
@@ -824,7 +806,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Pythonist", "Developer", "Fast Learner"],
+      strings: ["Product design", "CNC Machining", "3D Printing", "Contemporary Art"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
