--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               <h2>G'day, I'm <span class="teal">Wallace.</span></h2>
               <h4 style="color:#ffffff">We do <span class="typing" style="font-weight: 300; color:#0b1a2b"></span></h4>
               <!-- <h5 style="color:#0a0a11">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>We make things happen.</h5>
+              <h5>Here in wallace.studio We make things happen.</h5>
             </div>
             <div class="social">
               <!-- <a href="https://angel.co/u/varad_bhogayata" target="_blank">
@@ -285,10 +285,10 @@
                 <img alt="quiz app" src="/assets/img/project-quizup-logo-1.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Quiz Web-App<i
+                <span class="card-title activator teal-text hoverline">Custom Marine Touchscreens @ Polarix<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A quiz playing web app based on Django
+                  CNC Milled touchscreens for extreme use cases
                 </p>
               </div>
               <div class="card-reveal">
@@ -361,10 +361,10 @@
                 style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Blog Web-App<i
+                <span class="card-title activator teal-text hoverline">Phase Pole @ Phase Industries<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A simple and extensible blog web-app based on Flask.
+                  Innovative transducer mounting solution for modern live-view transducers.
                 </p>
               </div>
               <div class="card-reveal">
@@ -528,7 +528,7 @@
                 </ul>
                 <div class="card-action">
                   <a aria-label="Visit the GitHub repo for  project"
-                    href="https://github.com/varadbhogayata/visual-question-answering" target="_blank"
+                    href="https://github.comg" target="_blank"
                     data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -548,16 +548,16 @@
       <div class="container">
 
         <p>
-          <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
-            data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
+          <a aria-label="Email wallace.studio" href="mailto:contact@wallace.studio" target="_blank" data-position="top"
+            data-tooltip="Email wallace.studio" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+              class="fa fa-envelope"></i><a aria-label="Email wallace.studio" href="contact@wallace.studio"
               class="hoverline">contact@wallace.studio</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on GitHub"
+          <a aria-label="View GitHub" href="http://github.com/" target="_blank"
+            data-position="top" data-tooltip="View GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/varadbhogayata" class="hoverline"
+              aria-label="Github" href="http://github.com/" class="hoverline"
               target="_blank">github.com/</a></a>
         </p>
 
