--- a/index.html
+++ b/index.html
@@ -203,9 +203,8 @@
         <p>
           We design, develope and manufacture products.
 
-          We are experienced in a wide range of modern manufacturing techniques.
+          We possess extensive experience in a variety of advanced manufacturing techniques.
 
-          We will provide solutions to your problems.
         </p>
         <p>
           
@@ -216,7 +215,11 @@
           Detail-oriented Software Developer with professional experience in Backend Development, Machine Learning, Computer Vision. I am adept in Python, Django, Flask, SQL, Machine Learning, Computer Vision.           
         </p> -->
         <p>
-          Looking for an opportunity to work in a challenging position combining my skills in Software Engineering, which provides professional development, interesting experiences and personal growth.
+          We are eager to leverage our extensive design and manufacturing expertise to bring your project to life.
+        </p>
+        
+        <p>
+          We will provide solutions to your problems.
         </p>
         <!-- <p>
           Another Paragraph
@@ -257,20 +260,20 @@
                 <span class="card-title grey-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> Django, HTML, CSS, Bootstrap, SQLite, AWS S3, Heroku</li>
-                  <li>Register/login to the web app(with OAuth-based Google Sign-In).</li>
-                  <li>Search and filter songs based on language and singer.</li>
-                  <li>Create multiple playlists and add/remove songs to/from playlist.</li>
-                  <li>Scroll through recently played/viewed songs.</li>
+                  <li><b>Processes:</b> Prototyping, CNC machining, ABS injection molding</li>
+                  <li>In house design, development and testing of fishing lures.</li>
+                  <li>Rapid prototyping, testing and iteration of products.</li>
+                  <li>Manufacture of lures in both high and low volumes</li>
+
 
 
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit " href="https://galvanic-music.herokuapp.com/" target="_blank" data-position="top"
+                  <a aria-label="Visit " href="https://etohlures.com/" target="_blank" data-position="top"
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/music-player"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -288,7 +291,7 @@
                 <span class="card-title activator teal-text hoverline">Custom Marine Touchscreens @ Polarix<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  CNC Milled touchscreens for extreme use cases
+                  CNC Milled touchscreens for challenging environments.
                 </p>
               </div>
               <div class="card-reveal">
@@ -297,17 +300,17 @@
                 <span class="card-title grey-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> Django, HTML, CSS, Bootstrap, SQLite, Heroku</li>
-                  <li>Register/login to the web app(with OAuth-based Google Sign-In).</li>
-                  <li>Play Quiz and see the leaderboard</li>
-
+                  <li><b>Processes:</b> CAD Modelling, Load simulations, CNC machining</li>
+                  <li>In house design, development and testing of industrial screens.</li>
+                  <li>Understanding challenges in real world applications.</li>
+                  <li>Compliance testing of product for specific use cases.</li>
                 </ul>
                 <div class="card-action">
                   <a aria-label="Visit " href="https://quiz-up-app.herokuapp.com/" target="_blank" data-position="top"
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/QuizUp"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -373,10 +376,9 @@
                 <span class="card-title teal-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> HTML, CSS, Bootstrap, Flask, SQLAlchemy, Postgresql, Python</li>
-                  <li>Users can view posts and contact the admin via Contact Page.</li>
-                  <li>Admin can Add, Delete, Update posts.</li>
-
+                  <li><b>Tools:</b> CAD modelling, Prototyping, 3D printing</li>
+                  <li>Design end use parts with complex geometry and componentry suitable for 3D printing</li>
+                  <li>SLS Nylon 3D printed end use parts to mitigate high tooling costs while maintaining durability</li>
 
                 </ul>
                 <div class="card-action">
@@ -384,7 +386,7 @@
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/flask-blog"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -400,7 +402,7 @@
                 <img alt="Screenshot of  web app" src="/assets/img/project-aim_bert-bias.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Visual Question Answering<i
+                <span class="card-title activator teal-text hoverline">Fish Sculpt Project<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   An attention-based classification model that aims at generating an answer for a given input image.
