--- a/index.html
+++ b/index.html
@@ -35,12 +35,10 @@
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Varad Bhogayata | Software Developer" />
-  <meta property="og:description" content="Software Developer" />
+  <meta property="og:title" content="Product Design" />
+  <meta property="og:description" content="Product design" />
   <meta property="og:url" content="https://varadbhogayata.github.io/" />
-  <meta property="og:site_name" content="Varad Bhogayata | Software Developer" />
-  <meta property="article:publisher" content="https://varadbhogayata.github.io/" />
-  <meta property="og:image" content="https://varadbhogayata.github.io/examples/preview.JPG" />
+
   <!-- Twitter -->
   <meta name="twitter:title" content="Product Design | 3D Printing  | Artist " />
   <meta name="author" content="wallace.studio" />
@@ -201,9 +199,7 @@
           </h2>
         </blockquote> -->        
         <p>
-          We design, develope and manufacture products.
-
-          We possess extensive experience in a variety of advanced manufacturing techniques.
+          We specialize in designing, developing, and manufacturing products, with extensive experience in a wide range of advanced manufacturing techniques.
 
         </p>
         <p>
@@ -215,11 +211,7 @@
           Detail-oriented Software Developer with professional experience in Backend Development, Machine Learning, Computer Vision. I am adept in Python, Django, Flask, SQL, Machine Learning, Computer Vision.           
         </p> -->
         <p>
-          We are eager to leverage our extensive design and manufacturing expertise to bring your project to life.
-        </p>
-        
-        <p>
-          We will provide solutions to your problems.
+          Our team can leverage this expertise to bring your project to life, delivering tailored solutions to meet your specific needs.
         </p>
         <!-- <p>
           Another Paragraph
@@ -261,9 +253,9 @@
                     class="mdi-navigation-close right"></i></span>
                 <ul>
                   <li><b>Processes:</b> Prototyping, CNC machining, ABS injection molding</li>
-                  <li>In house design, development and testing of fishing lures.</li>
-                  <li>Rapid prototyping, testing and iteration of products.</li>
-                  <li>Manufacture of lures in both high and low volumes</li>
+                  <li>In-house design, development, and testing of custom fishing lures.</li>
+                  <li>Rapid prototyping, product testing, and iterative development.</li>
+                  <li>Manufacture of fishing lures in both small and large volumes.</li>
 
 
 
@@ -302,8 +294,8 @@
                 <ul>
                   <li><b>Processes:</b> CAD Modelling, Load simulations, CNC machining</li>
                   <li>In house design, development and testing of industrial screens.</li>
-                  <li>Understanding challenges in real world applications.</li>
-                  <li>Compliance testing of product for specific use cases.</li>
+                  <li>Understanding challenges in real-world applications.</li>
+                  <li>Compliance testing of products for targeted use cases.</li>
                 </ul>
                 <div class="card-action">
                   <a aria-label="Visit " href="https://quiz-up-app.herokuapp.com/" target="_blank" data-position="top"
@@ -377,8 +369,8 @@
                     class="mdi-navigation-close right"></i></span>
                 <ul>
                   <li><b>Tools:</b> CAD modelling, Prototyping, 3D printing</li>
-                  <li>Design end use parts with complex geometry and componentry suitable for 3D printing</li>
-                  <li>SLS Nylon 3D printed end use parts to mitigate high tooling costs while maintaining durability</li>
+                  <li>Designing end-use parts with complex geometries and components optimized for 3D printing.</li>
+                  <li>SLS Nylon 3D-printed end-use production parts, reducing tooling costs while ensuring durability.</li>
 
                 </ul>
                 <div class="card-action">
@@ -405,7 +397,7 @@
                 <span class="card-title activator teal-text hoverline">Fish Sculpt Project<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  An attention-based classification model that aims at generating an answer for a given input image.
+                  A 
                 </p>
               </div>
               <div class="card-reveal">
@@ -423,7 +415,7 @@
                 </ul>
                 <div class="card-action">
                   <a aria-label="Visit the GitHub repo for  project"
-                    href="https://github.com/varadbhogayata/visual-question-answering" target="_blank"
+                    href="https://github.com/" target="_blank"
                     data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -460,7 +452,7 @@
                 </ul>
                 <!-- TODO: UPLOAD THIS PROJECT ON GITHUB -->
                 <div class="card-action">
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -495,7 +487,7 @@
 
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -571,10 +563,10 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Product design", "CNC Machining", "3D Printing", "Contemporary Art"],
+      strings: ["Product design.", "CNC Machining.", "3D Printing.", "Sculptures."],
       loop: true,
       typeSpeed: 80,
-      backSpeed: 40
+      backSpeed: 30
     });
   </script>
 
