--- a/index.html
+++ b/index.html
@@ -164,6 +164,13 @@
               <h4 style="color:#ffffff">We do <span class="typing" style="font-weight: 300; color:#0b1a2b"></span></h4>
               <!-- <h5 style="color:#0a0a11">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>Here in wallace.studio We make things happen.</h5>
+              <p>
+                We specialize in designing, developing, and manufacturing products, with extensive experience in a wide range of advanced manufacturing techniques.
+      
+              </p>
+              <p>
+                Our team can leverage this expertise to bring your project to life, delivering tailored solutions to meet your specific needs.
+              </p>
             </div>
             <div class="social">
               <!-- <a href="https://angel.co/u/varad_bhogayata" target="_blank">
