--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <h3 class="page-title white-text teal">Projects</h3>
       <div class="container">
         <div class="row">
-
+          <!-- 1. ETOH Lures -->
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
@@ -242,7 +242,7 @@
               </div>
             </div>
           </div>
-
+          <!-- 1. Polarix -->
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
@@ -317,7 +317,7 @@
             </div>
           </div> -->
 
-          <!-- Flask Project -->
+          <!-- Phase Pole -->
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
@@ -356,7 +356,7 @@
             </div>
           </div>
 
-          <!-- VQA -->
+          <!-- Fish Sculpt -->
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
@@ -381,7 +381,7 @@
                 </ul>
                 <div class="card-action">
                   <a aria-label="Visit the GitHub repo for  project"
-                    href="https://github.com/" target="_blank"
+                    href="https://fishsculpt.com/" target="_blank"
                     data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -390,17 +390,17 @@
             </div>
           </div>
 
-          <!-- Head Counting System -->
+          <!-- 3D Cairns -->
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="Screenshot of  web app" src="/assets/img/Blog-Images-Forget-Machine-Learning-Humans-Still-Have-a-Lot-to-Learn-Part-II.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Head Counting System<i
+                <span class="card-title activator teal-text hoverline">3D Cairns<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A system that calculates the attendance of the class from a panoramic image of a live classroom.
+                  3D Printing, Scanning, CAD Drafting service in Cairns, Australia
                 </p>
               </div>
               <div class="card-reveal">
@@ -409,14 +409,12 @@
                 <span class="card-title brown-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li>Used Singular Value Decomposition for image compression; applied various image processing
-                    techniques and morphological operations to
-                    detect the number of heads.</li>
-
+                  <li>3D printing, scanning and modelling on demand.</li>
+                  <li>Reverse engineering and remake obsolete parts.</li>
                 </ul>
                 <div class="card-action">
                   <a aria-label="Visit the GitHub repo for  project"
-                    href="https://github.comg" target="_blank"
+                    href="https://3dcairns.com" target="_blank"
                     data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
