--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Product Design" />
   <meta property="og:description" content="Product design" />
-  <meta property="og:url" content="https://varadbhogayata.github.io/" />
+  <meta property="og:url" content="https://wallace.studio" />
 
   <!-- Twitter -->
   <meta name="twitter:title" content="Product Design | 3D Printing  | Artist " />
@@ -163,10 +163,9 @@
               <h2>G'day, I'm <span class="teal">Wallace.</span></h2>
               <h4 style="color:#ffffff">We do <span class="typing" style="font-weight: 300; color:#0b1a2b"></span></h4>
               <!-- <h5 style="color:#0a0a11">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Here in wallace.studio We make things happen.</h5>
+              <h5>Here in wallace.studio we make things happen.</h5>
               <p>
                 We specialize in designing, developing, and manufacturing products, with extensive experience in a wide range of advanced manufacturing techniques.
-      
               </p>
               <p>
                 Our team can leverage this expertise to bring your project to life, delivering tailored solutions to meet your specific needs.
@@ -252,7 +251,7 @@
                 <span class="card-title activator teal-text hoverline">Custom Marine Touchscreens @ Polarix<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  CNC Milled touchscreens for challenging environments.
+                  CNC Milled touchscreens for the challenging marine environment.
                 </p>
               </div>
               <div class="card-reveal">
@@ -299,8 +298,6 @@
                 <ul>
                   <li><b>Tools:</b> HTML, CSS, Bootstrap, SQLite, Django, Heroku</li>
                   <li>Users can view list and detail information for books and authors.</li>
-                  <li>Admin users can create and manage models.</li>
-                  <li>Librarians can renew reserved books.</li>
 
                 </ul>
                 <div class="card-action">
