--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
     <!-- Main Content-->
     <main>
       <!-- First Section: Heading lines and image -->
-      <section id="intro">
+      <section id="intro" class="section scrollspy half-height">
         <div class="overlay"></div>
         <div class="container">
           <div class="col-md-9">
@@ -300,7 +300,7 @@
                   ></span>
                 </h4>
                 <!-- <h5 style="color:#0a0a11">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-                <h5>Here at wallace.studio we make things happen.</h5>
+                <h5>Here in wallace.studio we make things happen.</h5>
                 <p>
                   We specialize in designing, developing, and manufacturing
                   products, with extensive experience in a wide range of
