--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
     <!-- Main Content-->
     <main>
       <!-- First Section: Heading lines and image -->
-      <section id="intro" class="section scrollspy half-height">
+      <section id="intro">
         <div class="overlay"></div>
         <div class="container">
           <div class="col-md-9">
